src/test/resources/invalid/unreachableCode/afterCompleteIf.vas
class Main is
    method foo() : Integer is
        var a : Integer = 0
        var b : Integer = 0
        var c : Integer = 1
        if a.equal(c) then
            return a
        else
            return c
        end
        c = 2
    end
end
